# blog

client/: Cargo.toml
client/src/: app.rs  main.rs
client/src/components/: card.rs  container.rs  home.rs  mod.rs  not_found.rs
server/: test.html
server/src/: main.rs
server/src/article/: delete.rs
server/src/comment/: mod.rs  view.rs
server/src/models/: comment.rs  user.rs
server/src/user/: login.rs
