[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3.60", features = ["Window", "Document"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
